src/blocks/metadata/style.scss
.artwork-metadata {
	.editor-styles-wrapper &__title {
		line-height: 1.2;
	}

	&__container {
		display: flex;
		flex-direction: row;
		align-items: center;
		span {
			font-family: sans-serif;
			font-size: 0.8rem;
			padding: 0 0.5em;
		}
	}

	.editor-styles-wrapper &__message {
		font-size: 13px;
		// See WP Core .components-base-control class.
		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
		margin-bottom: 0.5em;
	}

	.editor-styles-wrapper &__input {
		div,
		label {
			margin-bottom: 0;
		}
		div {
			display: flex;
			flex-direction: row-reverse;
			justify-content: flex-end;
			align-items: center;
		}
		input {
			width: 5.25em;
			margin-right: 0.5em;
			height: 2.25em;
		}
	}

	.editor-styles-wrapper &__button {
		cursor: pointer;
	}
}

